syntax = "proto3";

package proto;

option go_package = "./pkg/proto";

enum SyscallType {
    Unknown = 0;
    Exec = 1;
	Fork = 2;
	Open = 3;
    Exit = 4;
    Fcntl = 5;
}

message ContainerContext {
    string ID = 1;
    string Name = 2;
    string Tag = 3;
    uint64 CreatedAt = 4;
}

message FcntlSyscallMsg {
    uint32 Fd = 1;
    uint32 Cmd = 2;
}

message ExecSyscallMsg {
    string Filename = 1;
    repeated string Args = 2;
    repeated string Envs = 3;
}

message ForkSyscallMsg {
    uint32 PPID = 1;
}

message ExitSyscallMsg {}

message OpenSyscallMsg {
    string Filename = 1;
    uint32 Flags = 2;
    uint32 Mode = 3;
}

message SyscallMsg {
    SyscallType Type = 1;
    uint32 PID = 2;
    ContainerContext ContainerContext = 3;

    ExecSyscallMsg Exec = 4;
    OpenSyscallMsg Open = 5;
    ForkSyscallMsg Fork = 6;
    ExitSyscallMsg Exit = 7;
    FcntlSyscallMsg Fcntl = 8;
}

message Response {}

service SyscallMsgStream {
	rpc SendSyscallMsg (SyscallMsg) returns (Response) {}
}